--- a/public/css/validation.css
+++ b/public/css/validation.css
@@ -1,8 +1,21 @@
+/* line 1, public/css/validation.scss */
 .validation-parent {
-    position: relative;
-}
+  position: relative; }
 
-.validation::after {
+/* line 5, public/css/validation.scss */
+.validation {
+  background: #ed7d31 none repeat scroll 0 0;
+  border-radius: 5px;
+  color: #fff;
+  left: 80px;
+  padding: 5px 10px 5px 10px;
+  position: absolute;
+  text-align: center;
+  top: -10px;
+  z-index: 9999;
+  display: none; }
+  /* line 17, public/css/validation.scss */
+  .validation:after {
     -moz-border-bottom-colors: none;
     -moz-border-left-colors: none;
     -moz-border-right-colors: none;
@@ -15,18 +28,6 @@
     content: "";
     position: absolute;
     left: 10%;
-    z-index: 9999;
-}
+    z-index: 9999; }
 
-.validation {
-    background: #ed7d31 none repeat scroll 0 0;
-    border-radius: 5px;
-    color: #fff;
-    left: 80px;
-    padding: 5px 10px 5px 10px;
-    position: absolute;
-    text-align: center;
-    top: -10px;
-    z-index: 9999;
-    display: none;
-}
+/*# sourceMappingURL=validation.css.map */
