--- a/public/css/base.scss
+++ b/public/css/base.scss
@@ -16,3 +16,27 @@ footer {
         min-width: 200px;
     }
 }
+
+.fixed-action-btn {
+    position: fixed;
+    right: 23px;
+    bottom: 23px;
+    padding-top: 15px;
+    margin-bottom: 0;
+    z-index: 997;
+}
+
+.btn-floating {
+    display: inline-block;
+    width: 56px;
+    height: 56px;
+    vertical-align: middle;
+    color: white;
+    padding-top: 15px;
+    background-color: #ed4149;
+    border-radius: 50%;
+    text-align: center;
+    &:hover {
+        color: white;
+    }
+}
